lib/kossjs_flutter_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/kossjs_flutter.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class KossjsFlutterBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  KossjsFlutterBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  KossjsFlutterBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int sum(int a, int b) {
    return _sum(a, b);
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  int sum_long_running(int a, int b) {
    return _sum_long_running(a, b);
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'sum_long_running',
      );
  late final _sum_long_running = _sum_long_runningPtr
      .asFunction<int Function(int, int)>();

  ffi.Pointer<ffi.Char> version() {
    return _version();
  }

  late final _versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('version');
  late final _version = _versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  int create() {
    return _create();
  }

  late final _createPtr = _lookup<ffi.NativeFunction<ffi.LongLong Function()>>(
    'create',
  );
  late final _create = _createPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Char> eval(int inst, ffi.Pointer<ffi.Char> code) {
    return _eval(inst, code);
  }

  late final _evalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.LongLong, ffi.Pointer<ffi.Char>)
        >
      >('eval');
  late final _eval = _evalPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> run_async(
    int inst,
    ffi.Pointer<ffi.Char> code,
    int timeout_ms,
  ) {
    return _run_async(inst, code, timeout_ms);
  }

  late final _run_asyncPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.LongLong,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
          )
        >
      >('run_async');
  late final _run_async = _run_asyncPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(int, ffi.Pointer<ffi.Char>, int)
      >();

  void destroy(int inst) {
    return _destroy(inst);
  }

  late final _destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>('destroy');
  late final _destroy = _destroyPtr.asFunction<void Function(int)>();
}
